--- a/vercel.json
+++ b/vercel.json
@@ -46,7 +46,7 @@
       ]
     },
     {
-      "source": "/(.*\\.(js|css|woff2|woff|ttf|otf))",
+      "source": "/(.*)\\.(js|css|woff2|woff|ttf|otf)",
       "headers": [
         {
           "key": "Cache-Control",
