🔧 Remove console log statements for image load errors in About and Projects components for cleaner code

--- a/vercel.json
+++ b/vercel.json
@@ -6,15 +6,7 @@
   "devCommand": "npm run dev",
   "rewrites": [
     {
-      "source": "/api/contact",
-      "destination": "/api/contact"
-    },
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/placeholder"
-    },
-    {
-      "source": "/((?!assets|api|_next|favicon).*)",
+      "source": "/((?!assets|_next|favicon).*)",
       "destination": "/index.html"
     }
   ],
