--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@studio-freight/lenis": "^1.0.42",
     "@tanstack/react-query": "^5.60.5",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
@@ -60,6 +61,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "framer-motion": "^11.18.2",
     "input-otp": "^1.4.2",
+    "lenis": "^1.3.8",
     "lucide-react": "^0.453.0",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
